--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yuka Hatori
 description: Summer 2021 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/profilePic.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/profilePic.jpg
 
 #
 # Flags below are optional
